--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@types/react-slick": "^0.23.10",
+    "@yext/chat-headless-react": "^0.5.11",
+    "@yext/chat-ui-react": "^0.6.0",
+    "@yext/react-components": "^0.0.6",
     "@yext/search-headless-react": "^2.2.0",
     "@yext/search-ui-react": "^1.2.1",
     "@yext/types": "0.1.12-alpha",
